<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable name="viewmodel" type="pe.com.redcups.core.viewmodel.events.EventAddViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="match_parent">
        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
            <LinearLayout
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/event_add_fragment"
                    tools:context=".fragment.EventAddFragment"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="@dimen/medium_margin">
                <ImageView
                        android:id="@+id/event_add_image"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:src="@mipmap/add_image"
                        android:layout_marginTop="24dp"
                />
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/event_name_label"
                        android:layout_marginTop="@dimen/small_margin"
                        android:layout_marginBottom="@dimen/small_margin"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/event_name_text_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={viewmodel.event.name}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/event_description_label"
                        android:layout_marginTop="@dimen/small_margin"
                        android:layout_marginBottom="@dimen/small_margin"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/event_description_text_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={viewmodel.event.description}"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/event_address_label"
                        android:layout_marginTop="@dimen/small_margin"
                        android:layout_marginBottom="@dimen/small_margin"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/event_address_text_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={viewmodel.event.address}"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/date_text_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/event_date"
                        android:layout_marginTop="@dimen/small_margin"
                        android:layout_marginBottom="@dimen/small_margin"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:endIconMode="custom"
                        app:endIconDrawable="@drawable/ic_event_black_24dp">
                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/date_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:inputType="date"
                            android:imeOptions="actionDone"/>
                </com.google.android.material.textfield.TextInputLayout>
                <fragment
                        android:id="@+id/map_fragment"
                        android:layout_marginTop="@dimen/small_margin"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_weight="1"
                        android:name="com.google.android.gms.maps.SupportMapFragment"
                        tools:context="pe.com.redcups.juergapp_android.fragments.EventAddFragment"/>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_event_button"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/medium_margin"
                android:src="@drawable/ic_save_black_24dp"
                android:tint="@color/white"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>