<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.CartFragment"
        android:orientation="vertical"
        android:gravity="center">

    <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:text="@string/content_string"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cart_content_recycler_view"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>
    <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/confirm_purchase_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ordernar"/>
</LinearLayout>